examples/errors/parsing/iter-expr-annot-effect.cn
fun countdown : Int -> Step(Int, ()) [impure] = {
  x -> Done () : Step(Int, ()) [impure]
}

main : () [impure] =
  iter (x = 10) {
    countdown x
  }
